--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -15,6 +15,7 @@ body {
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    white-space: pre-wrap;
 
     &:focus {
         box-shadow: none;
@@ -241,6 +242,7 @@ body {
         height: 50px;
         display: flex;
         align-items: center;
+        flex-direction: column;
         padding-left: 62px;
         border-left: 3px solid transparent;
         @include radius(0);
@@ -353,4 +355,39 @@ body {
         width: 48%;
     }
 
+    .nav-pills {
+        justify-content: space-between;
+
+        .nav-link {
+            flex-direction: row;
+            height: 26px;
+            padding: 0;
+            border-bottom: 3px solid transparent;
+            border-left: none;
+            margin-bottom: 46px;
+        }
+    }
+
+}
+
+@media only screen and (max-width: 575.8px) {
+    body {
+        line-height: $base-line-height - 8px;
+        font-size: $base-font-size - 6px !important;
+    }
+
+    .title-section,
+    .title-white {
+        font-size: $font-size-h3;
+        line-height: $font-size-h3;
+    }
+
+    .btn-red {
+        height: 55px;
+        width: 100%;
+    }
+
+    .spinner {
+        width: 100%;
+    }
 }
