--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -346,98 +346,66 @@
             .btn-border {
                 display: none;
             }
-
-            .social-networks {
-                margin-top: 25px;
-                justify-content: flex-end;
-                width: calc(100% - 242px);
-
-                >li {
-
-                    >a {
-                        width: 20px;
-                    }
-                }
-            }
         }
 
         &__address {
             display: none;
         }
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .header {
+        padding: 12px 0;
+
+        &__top {
+            padding-left: 50px;
+            font-size: 10px;
+            line-height: 12px;
+
+            .social-networks {
+                margin-top: 0;
+                width: auto;
+                position: absolute;
+                bottom: 5px;
+                left: 0;
+
+                >li {
+
+                    >a {
+                        width: 18px;
+                    }
+                }
+            }
+        }
 
         &__logo {
 
             >a {
-                width: 90px;
+                width: 60px;
                 margin-right: 12px;
             }
 
             >span {
-                width: 180px;
+                width: 150px;
             }
         }
 
         .language {
-            >a {
-
-                &:first-child {
-                    &::after {
-                        font-size: 14px;
-                        line-height: 17px;
-                    }
-                }
-
-                &.active {
-                    font-size: 14px;
-                    line-height: 17px;
-                }
-            }
+            display: none;
         }
     }
 
     .phone {
-        margin: 25px 0 0 auto;
-        position: relative;
-        padding-left: 10px;
+        margin: 12px 0 0 auto;
+    }
 
-        &__list {
-            display: none;
-            width: 100%;
-            padding: 10px;
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 100%;
-            background-color: $bg-dark;
-            z-index: 2;
-
-            >li {
-                margin-bottom: 6px;
-
-                &:last-child {
-                    margin-bottom: 0;
-                }
-            }
-        }
-
-        &__number {
-            font-size: $base-font-size;
-            line-height: $base-line-height;
-
-            >img {
-                margin-right: 8px;
-                width: 14px;
-            }
-        }
-
-        .arrow-down {
-            top: -10px;
-            margin-left: 8px;
+    .menu {
+        &__btn {
+            top: 16px;
         }
     }
 }
-
-@media screen and (max-width: 575.8px) {}
 
 @media screen and (min-width: 1350px) {
     header {
