--- a/app/scss/layout/_style-slick-arrow.scss
+++ b/app/scss/layout/_style-slick-arrow.scss
@@ -139,3 +139,14 @@
         }
     }
 }
+
+@media only screen and (max-width: 767.8px) {
+    .slider-dark {
+        &__arrows {
+            top: auto;
+            bottom: -70px;
+            width: 100%;
+            justify-content: center;
+        }
+    }
+}
