--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -96,6 +96,10 @@
             margin-right: 10px;
             width: 22px;
         }
+
+        >a {
+            color: $text-color-white;
+        }
     }
 
     .arrow-down {
