--- a/app/css/style.css
+++ b/app/css/style.css
@@ -13,7 +13,7 @@ input, button, select, textarea { margin: 0; font-family: inherit; font-size: in
 
 input { box-shadow: none; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; -ms-border-radius: 0; -o-border-radius: 0; }
 
-a { text-decoration: none; }
+a { text-decoration: none; color: inherit; }
 
 a:hover { color: inherit; text-decoration: none; transition: 0.4s ease; -webkit-transition: 0.4s ease; -moz-transition: 0.4s ease; -ms-transition: 0.4s ease; -o-transition: 0.4s ease; }
 
@@ -134,6 +134,10 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .social-networks > li > a { display: -webkit-flex; display: -ms-flexbox; display: flex; width: 25px; }
 
+.social-networks > li > a img { transform: scale(1); -webkit-transform: scale(1); -moz-transform: scale(1); -ms-transform: scale(1); -o-transform: scale(1); transition: -webkit-transform 0.3s ease; transition: transform 0.3s ease; transition: transform 0.3s ease, -webkit-transform 0.3s ease; -webkit-transition: transform 0.3s ease; -moz-transition: transform 0.3s ease; -ms-transition: transform 0.3s ease; -o-transition: transform 0.3s ease; }
+
+.social-networks > li > a img:hover { transform: scale(1.4); -webkit-transform: scale(1.4); -moz-transform: scale(1.4); -ms-transform: scale(1.4); -o-transform: scale(1.4); }
+
 .title-section { font-size: 60px; line-height: 72px; color: #000; font-weight: 900; }
 
 .title-white { font-size: 60px; line-height: 72px; color: #fff; font-weight: 900; }
@@ -172,13 +176,15 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .spinner__nav { position: relative; }
 
-.spinner__btn { height: 55px; width: 55px; cursor: pointer; font-size: 24px; line-height: 29px; color: #fff; background-color: #fa4616; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
+.spinner__btn { height: 55px; width: 55px; cursor: pointer; font-size: 24px; line-height: 29px; color: #fff; background-color: #fa4616; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; transition: background 0.15s ease-in-out; -webkit-transition: background 0.15s ease-in-out; -moz-transition: background 0.15s ease-in-out; -ms-transition: background 0.15s ease-in-out; -o-transition: background 0.15s ease-in-out; }
 
 .spinner__btn.spinner-up, .spinner__btn.spinner-down { bottom: 0; position: absolute; }
 
 .spinner__btn.spinner-up { right: 0; }
 
 .spinner__btn.spinner-down { left: 0; }
+
+.spinner__btn:hover { background: #DA2E00; }
 
 /*style for checkbox*/
 .label-checkbox { display: block; position: relative; width: 15px; height: 15px; margin: 0 15px 0 0; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
@@ -246,21 +252,29 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .header__address { color: #979797; margin: 0; }
 
-.phone { position: relative; padding-left: 10px; }
+.phone { position: relative; padding: 7px 12px 0 15px; color: #fff; }
 
-.phone__list { display: none; width: 100%; padding: 10px; position: absolute; left: 0; right: 0; top: 100%; background-color: #25282a; z-index: 2; }
+.phone.open { background-color: #fff; color: #000; }
 
-.phone__list > li { margin-bottom: 6px; }
+.phone.open svg { fill: #000; }
+
+.phone svg { fill: #fff; }
+
+.phone__list { display: none; width: 100%; padding: 7px 12px 15px 15px; position: absolute; left: 0; right: 0; top: 100%; background-color: #fff; z-index: 2; }
+
+.phone__list.show { display: block; }
+
+.phone__list > li { padding-left: 32px; margin-bottom: 6px; }
 
 .phone__list > li:last-child { margin-bottom: 0; }
 
-.phone__number { display: -webkit-inline-flex; display: -ms-inline-flexbox; display: inline-flex; font-weight: 900; font-size: 24px; line-height: 29px; }
+.phone__number { display: -webkit-inline-flex; display: -ms-inline-flexbox; display: inline-flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-weight: 900; font-size: 24px; line-height: 29px; }
 
-.phone__number > img { margin-right: 10px; width: 22px; }
+.phone__number > svg { margin-right: 10px; width: 22px; }
 
-.phone__number > a { color: #fff; }
+.phone__number > a:hover { color: #FF9300; }
 
-.phone .arrow-down { position: relative; top: -12px; margin-left: 9px; width: 10px; }
+.phone .arrow-down { position: relative; top: -10px; margin-left: 9px; width: 10px; cursor: pointer; }
 
 .menu { margin-top: 26px; }
 
@@ -277,16 +291,13 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 @media screen and (max-width: 1199.8px) { .header { padding: 25px 0; }
   .header__top { padding-left: 61px; position: relative; font-size: 12px; line-height: 14px; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
   .header__top .btn-border { width: 90px; height: 22px; font-size: 12px; line-height: 14px; }
-  .header__top .social-networks { margin-top: 25px; -webkit-justify-content: flex-end; -ms-flex-pack: end; justify-content: flex-end; width: calc(100% - 242px); }
+  .header__top .social-networks { margin-top: 25px; -webkit-justify-content: flex-end; -ms-flex-pack: end; justify-content: flex-end; width: calc(100% - 260px); }
   .header__top .social-networks > li > a { width: 20px; }
   .header__logo > a { width: 90px; margin-right: 12px; }
   .header__logo > span { width: 180px; }
   .header .language > a:first-child::after { font-size: 14px; line-height: 17px; }
   .header .language > a.active { font-size: 14px; line-height: 17px; }
-  .phone { margin: 25px 0 0 auto; position: relative; padding-left: 10px; }
-  .phone__list { display: none; width: 100%; padding: 10px; position: absolute; left: 0; right: 0; top: 100%; background-color: #25282a; z-index: 2; }
-  .phone__list > li { margin-bottom: 6px; }
-  .phone__list > li:last-child { margin-bottom: 0; }
+  .phone { margin: 25px 0 0 auto; }
   .phone__number { font-size: 18px; line-height: 22px; }
   .phone__number > img { margin-right: 8px; width: 14px; }
   .phone .arrow-down { top: -10px; margin-left: 8px; }
@@ -369,6 +380,8 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 .assortment__card > img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; }
 
 .assortment__card:hover { color: #fff; box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.4); }
+
+.assortment__card:hover::before { content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0.4); }
 
 .assortment__card:hover .assortment__hover { opacity: 1; }
 
@@ -697,11 +710,15 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .call-us__title { font-weight: 700; font-size: 36px; line-height: 43px; margin-bottom: 8px; }
 
-.call-us__info .phone { margin-bottom: 20px; }
+.call-us__info .phone { display: inline-block; margin-bottom: 20px; margin-left: -12px; }
 
 .call-us__info .phone__number { font-size: 60px; line-height: 72px; }
 
-.call-us__info .phone .arrow-down { position: relative; top: -20px; margin-left: 9px; width: 34px; }
+.call-us__info .phone__list > li { padding: 0; }
+
+.call-us__info .phone .arrow-down { position: relative; top: -20px; margin-left: 9px; }
+
+.call-us__info .phone .arrow-down > svg { width: 34px; height: 34px; }
 
 .call-us__form { margin-top: 35px; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; }
 
@@ -715,9 +732,10 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .call-us__img { width: 120px; height: 120px; border-radius: 50%; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; overflow: hidden; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; margin-bottom: 30px; }
   .call-us__img > img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; }
   .call-us__title { font-size: 30px; line-height: 37px; margin-bottom: 12px; }
-  .call-us__info .phone { margin: 0 0 43px; }
+  .call-us__info .phone { margin: 0 0 43px -12px; }
   .call-us__info .phone__number { font-size: 50px; line-height: 62px; }
-  .call-us__info .phone .arrow-down { top: -18px; width: 32px; }
+  .call-us__info .phone .arrow-down { top: -18px; }
+  .call-us__info .phone .arrow-down > svg { width: 32px; height: 32px; }
   .call-us__form { margin-top: 18px; }
   .call-us__form .btn-red { min-width: 225px; } }
 
@@ -725,7 +743,8 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .call-us__img > img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; }
   .call-us__title { font-size: 24px; line-height: 29px; }
   .call-us__info .phone__number { font-size: 36px; line-height: 43px; }
-  .call-us__info .phone .arrow-down { top: -10px; width: 18px; margin-left: 16px; }
+  .call-us__info .phone .arrow-down { top: -10px; margin-left: 16px; }
+  .call-us__info .phone .arrow-down > svg { width: 18px; height: 18px; }
   .call-us__form { margin-top: 18px; }
   .call-us__form .btn-red { min-width: 210px; }
   .footer { font-size: 14px; line-height: 26px; }
