--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -60,6 +60,16 @@ body {
         >a {
             display: flex;
             width: 25px;
+
+            img {
+                @include transform(scale(1));
+                @include transition(transform 0.3s ease);
+
+                &:hover {
+                    @include transform(scale(1.4));
+                }
+            }
+
         }
     }
 }
@@ -172,6 +182,7 @@ body {
         align-items: center;
         justify-content: center;
         user-select: none;
+        @include transition(background 0.15s ease-in-out);
 
         &.spinner-up,
         &.spinner-down {
@@ -185,6 +196,10 @@ body {
 
         &.spinner-down {
             left: 0;
+        }
+
+        &:hover {
+            background: $btn-red-hover;
         }
     }
 }
